dependencies {
    apply plugin: 'groovy'
    apply plugin: 'application'
    apply plugin: 'java'
    compile 'org.codehaus.groovy:groovy-all:2.3.8'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

version = '1.0'
mainClassName='MazeBot.MazeRunner'

sourceCompatibility = 1.7
version = '1.0'

repositories {
    mavenCentral()
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.2.1'
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

tasks.withType(GroovyCompile) {
    configure(groovyOptions.forkOptions) {
        memoryMaximumSize = '1g'
        jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx1g']
    }
}